[tool.poetry]
name = "ml-cpe342"
version = "0.1.0"
description = ""
authors = ["qandle <kimchanidapa@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_cpe342"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
scikit-learn = "^1.3.1"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
